Use Files.write for wire-ready marker (Java 8 compat)
Co-authored-by: arendtio <arendtio@users.noreply.github.com>